--- a/API/docker-compose.yml
+++ b/API/docker-compose.yml
@@ -2,16 +2,17 @@ version: '3'
 
 services:
     python-api:
-        build: .
-        command: python -u app.py
+        image: yournightmare777/server-ab
+        container_name: "server-ab"
+        restart: on-failure
         ports:
             - "0.0.0.0:5000:5000"
         volumes:
             - /proc/cpu-info:/app/src/cpu.txt
             - /proc/ram-info:/app/src/ram.txt
         depends_on:
-            -mongodb
-            
+            - mongodb
+
     mongodb:
         image: mongo
         container_name: "mongo-container"
